--- a/minisink.html
+++ b/minisink.html
@@ -208,6 +208,6 @@
   <script src="js/core/owl-slider-2/owl.carousel.min.js"></script>
   <script src="js/core/scroll-parallax.min.js"></script>
   <script src="js/core/mouse-parallax/mouse-parallax.min.js"></script>
-  <script src="js/wow.js"></script>
+  <script src="js/core/wow.js"></script>
   <script src="js/app.js"></script>
 </body>
